# project2_sargsyan_narek_m25_555

./: .gitignore  README.md  db_meta.json  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
